C51-377: Fix z-index of case list pager

--- a/scss/components/_pager.scss
+++ b/scss/components/_pager.scss
@@ -9,7 +9,7 @@
   border-top: 1px solid $gray-light;
   padding: 18px 15px;
   position: relative;
-  z-index: 11;
+  z-index: 10;
 
   .disabled {
     display: none;
